--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ng-snotify/styles/material.scss",
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
